syntax = "proto3";

// Package arrebato.signing.service.v1 provides the schema for the SigningService, which is used to manage signing keys within the
// cluster.
package arrebato.signing.service.v1;

import "arrebato/signing/v1/signing.proto";

option go_package = "github.com/davidsbond/arrebato/internal/proto/arrebato/signing/service/v1;signingsvc";

// The SigningService is a gRPC service that can manage signing keys within the cluster.
service SigningService {
  // CreateKeyPair creates a new public/private key pair for signing messages for use by the client making
  // the call.
  rpc CreateKeyPair(CreateKeyPairRequest) returns (CreateKeyPairResponse);

  // GetPublicKey returns the public signing key of a specified client.
  rpc GetPublicKey(GetPublicKeyRequest) returns (GetPublicKeyResponse);

  // ListPublicKeys returns all public keys stored within the server.
  rpc ListPublicKeys(ListPublicKeysRequest) returns (ListPublicKeysResponse);
}

// The CreateKeyPairRequest message is the request DTO when calling SigningService.CreateKeyPair.
message CreateKeyPairRequest {}

// The CreateKeyPairResponse message is the response DTO when calling SigningService.CreateKeyPair.
message CreateKeyPairResponse {
  // The generated public/private key pair.
  arrebato.signing.v1.KeyPair key_pair = 1;
}

// The GetPublicKeyRequest message is the request DTO when calling SigningService.GetPublicKey.
message GetPublicKeyRequest {
  // The client to obtain the public key of.
  string client_id = 1;
}

// The GetPublicKeyResponse message is the request DTO when calling SigningService.GetPublicKey.
message GetPublicKeyResponse {
  // The client's public key.
  arrebato.signing.v1.PublicKey public_key = 1;
}

// The ListPublicKeysRequest message is the request DTO when calling SigningService.ListPublicKeys.
message ListPublicKeysRequest {}

// The ListPublicKeysRequest message is the response DTO when calling SigningService.ListPublicKeys.
message ListPublicKeysResponse {
  // The public keys stored in the server.
  repeated arrebato.signing.v1.PublicKey public_keys = 1;
}
